# aws-sdk-cpp-1.11-bazel-test

./: .bazelrc  BUILD.bazel  README.md  WORKSPACE.bazel  s3_client.cc
